[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunerize"
version = "0.2.0"
description = "Re-render audio as chiptune or through any SoundFont. Built-in NES synth + online SoundFont browser. Audio -> MIDI -> render -> WAV, locally."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "SysAdminDoc" }]
keywords = ["audio", "midi", "soundfont", "sf2", "fluidsynth", "basic-pitch", "chiptune", "transcription"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

[project.urls]
Homepage = "https://github.com/SysAdminDoc/Tunerize"
Issues = "https://github.com/SysAdminDoc/Tunerize/issues"
Changelog = "https://github.com/SysAdminDoc/Tunerize/blob/main/CHANGELOG.md"

[project.scripts]
tunerize = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
